bug fixed - requests before init

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-http-polyfill",
+  "name": "angular-cross-domain-request",
   "version": "0.0.1",
-  "description": "A polyfil service to $http, this service allows cross domain requests using iframe and post messaging",
-  "main": "CrossDomainRequest.js",
+  "description": "An angular.js service for making cross-domain requests using iframe and post message API",
+  "main": "cdr.module.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,5 +18,8 @@
   "license": "MIT",
   "devDependencies": {
     "jasmine": "^2.5.2"
+  },
+  "dependencies": {
+    "angular": "^1.5.8"
   }
 }
