--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   "author": "Yuval Birenoum",
   "license": "MIT",
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.1.1",
+    "gulp-uglify": "^2.0.0",
     "jasmine": "^2.5.2"
   },
   "dependencies": {
