--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An angular.js service for making cross-domain requests using iframe and post message API",
   "main": "dist/cdr.js",
   "scripts": {
-    "test": "exit 0"
+    "test": "gulp test"
   },
   "keywords": [
     "angular",
@@ -22,7 +22,11 @@
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.1.1",
     "gulp-uglify": "^2.0.0",
-    "jasmine": "^2.5.2"
+    "jasmine": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-spec-reporter": "0.0.26"
   },
   "dependencies": {
     "angular": "^1.5.8"
