--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   ],
   "author": "Yuval Birenoum",
   "license": "MIT",
+  "repository" :
+  { 
+    "type" : "git", 
+    "url" : "https://github.com/tWinE-xx/angular-cross-domain-request"
+  },
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
